MASTER: Cleaning up request filter.