@@ -1,9 +1,10 @@
 package com.marcs.jwt.config;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
+import org.springframework.http.HttpMethod;
 
 /**
  * JWT global variables class
@@ -13,28 +14,40 @@ import java.util.Map;
  */
 public class JwtGlobals {
 
-    // Void JWT Endpoints
-    public static final Map<String, List<String>> VOID_ENDPOINTS = new HashMap<String, List<String>>() {
+    /**
+     * Void endpoints that do not need to be validated with a jwt token.
+     */
+    public static final Map<String, List<HttpMethod>> VOID_ENDPOINTS = new HashMap<String, List<HttpMethod>>() {
+
         private static final long serialVersionUID = 1L;
         {
-            // Authentication Endpoint
-            put("/authenticate", Arrays.asList("ANY"));
+            // ==================
+            // Authentication App
+            // ===================
 
-            // Forgot Password Endpoint in Mail App
-            put("/api/mail-app/email/forgot-password", Arrays.asList("POST"));
+            // POST -> User Authentication Endpoint
+            put("/authenticate", List.of(HttpMethod.POST));
 
-            // Forgot Password Endpoint in User App
-            put("/api/user-app/user-profile/forgot-password", Arrays.asList("POST"));
+            // ===================
+            // User App
+            // ===================
 
-            // Create User Endpoint in User App
-            put("/api/user-app/user-profile", Arrays.asList("POST"));
+            // GET -> Get Email Exist status Endpoint
+            put("/api/user-app/user-profile/check-email", List.of(HttpMethod.GET));
 
-            // Get Stores Endpoint in Store App
-            put("/api/store-app/stores", Arrays.asList("GET"));
+            // POST -> Forgot Password Endpoint
+            put("/api/user-app/user-profile/forgot-password", List.of(HttpMethod.POST));
 
-            // Get Email Exist status Endpoint in User App
-            put("/api/user-app/user-profile/check-email", Arrays.asList("GET"));
+            // POST -> Create User Endpoint
+            put("/api/user-app/user-profile", List.of(HttpMethod.POST));
+
+            // ===================
+            // Store App
+            // ===================
+
+            // GET -> Get Stores Endpoint
+            put("/api/store-app/stores", List.of(HttpMethod.GET));
+
         }
     };
-
 }
